# infinite-precision-calc

./: .gitignore  CMakeLists.txt  test.sh
docs/: PROJECT_STRUCTURE.md  PROJECT_STRUCTURE.txt  README.md
src/: bigint.cpp  bigint.hpp  bigint_fft.hpp  bigint_karatsuba.cpp  bigint_karatsuba.hpp  infcalc  main.cpp  utils.cpp  utils.hpp
tests/: CMakeLists.txt
